wrote mongodump of original suspicious comments to s3

--- a/cfdv_2016_blm_get_data.ipynb
+++ b/cfdv_2016_blm_get_data.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'boto'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-0cd98c5f2eb9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mboto\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mboto\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkey\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mKey\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'boto'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from psaw import PushshiftAPI\n",
     "import praw\n",
@@ -35,13 +23,12 @@
     "\n",
     "from datetime import datetime as dt\n",
     "\n",
-    "import boto3\n",
-    "from boto3.s3.key import Key"
+    "import boto3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,20 +1995,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Save the comments from the suspicious users to s3 so we don't have to get them again"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Given a comment with `id`, get all the other comments in the thread as background"
    ]
   },
@@ -2046,75 +2019,6 @@
    "metadata": {},
    "source": [
     "Then, given an `action_type` by `author` in `subreddit` at `timestamp` retrieve actions of the same type in the subreddit going back to `date_start` or `limit` records, whichever comes first. Similarly, retrieve records going forward to `date_end` or `limit` records."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In [12]: for c in api.search_comments(link_ids='t3_4q6zhk', limit=10):\n",
-    "    ...:     print(c.d_)\n",
-    "    ...: \n",
-    "{'all_awardings': [], 'approved_at_utc': None, 'associated_award': None, 'author': 'KarsonPoofedOurPants', 'author_flair_background_color': '#dadada', 'author_flair_css_class': None, 'author_flair_richtext': [{'e': 'text', \n",
-    "'t': 'Team Skipecac '}, {'a': ':Skipecac:', 'e': 'emoji', 'u': 'https://emoji.redditmedia.com/5iyyvl27owa41_t5_39uhj/Skipecac'}], 'author_flair_template_id': 'ad7ede0e-3773-11ea-99a3-0ea4f4dfce7d', 'author_flair_text': 'Tea\n",
-    "m Skipecac :Skipecac:', 'author_flair_text_color': 'dark', 'author_flair_type': 'richtext', 'author_fullname': 't2_6d65s3pt', 'author_patreon_flair': False, 'author_premium': False, 'awarders': [], 'banned_at_utc': None, 'b\n",
-    "ody': 'F', 'can_mod_post': False, 'collapsed': False, 'collapsed_because_crowd_control': None, 'collapsed_reason': None, 'created_utc': 1589225360, 'distinguished': None, 'edited': False, 'gildings': {}, 'id': 'fqau7o6', 'i\n",
-    "s_submitter': False, 'link_id': 't3_ghfj1m', 'locked': False, 'no_follow': True, 'parent_id': 't1_fqaqrqh', 'permalink': '/r/Sinvicta/comments/ghfj1m/cursed_stats_someone_care_to_explain_084_dmg/fqau7o6/', 'retrieved_on': 1\n",
-    "589228898, 'score': 2, 'send_replies': True, 'stickied': False, 'subreddit': 'Sinvicta', 'subreddit_id': 't5_39uhj', 'total_awards_received': 0, 'treatment_tags': [], 'created': 1589225360.0}\n",
-    "{'all_awardings': [], 'approved_at_utc': None, 'associated_award': None, 'author': 'Raketenernie', 'author_flair_background_color': None, 'author_flair_css_class': None, 'author_flair_richtext': [], 'author_flair_template_i\n",
-    "d': None, 'author_flair_text': None, 'author_flair_text_color': None, 'author_flair_type': 'text', 'author_fullname': 't2_5w5ol6y', 'author_patreon_flair': False, 'author_premium': False, 'awarders': [], 'banned_at_utc': No\n",
-    "ne, 'body': 'Reading my posts of two years, impressive.Stalker? But dont be embarrassed get professional help, see a doctor.  Speaking of IQ just a hint,  the one who gets personal or aggresive is not a sign of high intelli\n",
-    "gence, but then what do I expect of a troll account. And blocked', 'can_mod_post': False, 'collapsed': False, 'collapsed_because_crowd_control': None, 'collapsed_reason': None, 'created_utc': 1589225360, 'distinguished': No\n",
-    "ne, 'edited': False, 'gildings': {}, 'id': 'fqau7o7', 'is_submitter': False, 'link_id': 't3_ggwglf', 'locked': False, 'no_follow': True, 'parent_id': 't1_fqaedq9', 'permalink': '/r/KinFoundation/comments/ggwglf/someone_just\n",
-    "_posted_what_happens_when_the_ruling/fqau7o7/', 'retrieved_on': 1589228898, 'score': 1, 'send_replies': True, 'stickied': False, 'subreddit': 'KinFoundation', 'subreddit_id': 't5_3kgc0', 'total_awards_received': 0, 'treatme\n",
-    "nt_tags': [], 'created': 1589225360.0}\n",
-    "{'all_awardings': [], 'approved_at_utc': None, 'associated_award': None, 'author': 'yunglordsuz', 'author_flair_background_color': None, 'author_flair_css_class': 'White', 'author_flair_richtext': [{'a': ':White:', 'e': 'em\n",
-    "oji', 'u': 'https://emoji.redditmedia.com/vw3pij3dzlv41_t5_2vpf3/White'}, {'e': 'text', 't': ' SW-1833-9750-4997 - SUZ, Paradyke'}], 'author_flair_template_id': '941b1dbe-cbfb-11e2-aab4-12313d2c1c24', 'author_flair_text': '\n",
-    ":White: SW-1833-9750-4997 - SUZ, Paradyke', 'author_flair_text_color': 'dark', 'author_flair_type': 'richtext', 'author_fullname': 't2_123bm6', 'author_patreon_flair': False, 'author_premium': False, 'awarders': [], 'banned\n",
-    "_at_utc': None, 'body': 'interested! kabuki', 'can_mod_post': False, 'collapsed': False, 'collapsed_because_crowd_control': None, 'collapsed_reason': None, 'created_utc': 1589225360, 'distinguished': None, 'edited': False, \n",
-    "'gildings': {}, 'id': 'fqau7o8', 'is_submitter': False, 'link_id': 't3_ghswjo', 'locked': False, 'no_follow': True, 'parent_id': 't3_ghswjo', 'permalink': '/r/acturnips/comments/ghswjo/sw_raccoon_slave_children_buying_for_f\n",
-    "ive_nine/fqau7o8/', 'retrieved_on': 1589228898, 'score': 1, 'send_replies': True, 'stickied': False, 'subreddit': 'acturnips', 'subreddit_id': 't5_2vpf3', 'total_awards_received': 0, 'treatment_tags': [], 'created': 1589225\n",
-    "360.0}   \n",
-    "{'all_awardings': [], 'approved_at_utc': None, 'associated_award': None, 'author': 'makecars4happen', 'author_flair_background_color': None, 'author_flair_css_class': None, 'author_flair_richtext': [], 'author_flair_templat\n",
-    "e_id': None, 'author_flair_text': None, 'author_flair_text_color': None, 'author_flair_type': 'text', 'author_fullname': 't2_88hei9t', 'author_patreon_flair': False, 'author_premium': False, 'awarders': [], 'banned_at_utc':\n",
-    " None, 'body': 'Scream and bleed everywhere from my caved in skull', 'can_mod_post': False, 'collapsed': False, 'collapsed_because_crowd_control': None, 'collapsed_reason': None, 'created_utc': 1589225360, 'distinguished': \n",
-    "None, 'edited': False, 'gildings': {}, 'id': 'fqau7o9', 'is_submitter': True, 'link_id': 't3_ghuipr', 'locked': False, 'no_follow': True, 'parent_id': 't1_fqatz8g', 'permalink': '/r/amathenedit/comments/ghuipr/amate_to_make\n",
-    "_me_seem_like_a_sickly_child/fqau7o9/', 'retrieved_on': 1589228898, 'score': 2, 'send_replies': True, 'stickied': False, 'subreddit': 'amathenedit', 'subreddit_id': 't5_3c8cz', 'total_awards_received': 0, 'treatment_tags': \n",
-    "[], 'created': 1589225360.0}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b'bytes'|file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import boto\n",
-    "from boto.s3.key import Key\n",
-    "import requests\n",
-    "\n",
-    "#setup the bucket\n",
-    "c = boto.connect_s3(your_s3_key, your_s3_key_secret)\n",
-    "b = c.get_bucket(bucket, validate=False)\n",
-    "\n",
-    "#download the file\n",
-    "url = \"http://en.wikipedia.org/static/images/project-logos/enwiki.png\"\n",
-    "r = requests.get(url)\n",
-    "if r.status_code == 200:\n",
-    "    #upload the file\n",
-    "    k = Key(b)\n",
-    "    k.key = \"image1.png\"\n",
-    "    k.content_type = r.headers['content-type']\n",
-    "    k.set_contents_from_string(r.content)"
    ]
   },
   {
