--- a/get_comments_by_suspicious_users.ipynb
+++ b/get_comments_by_suspicious_users.ipynb
@@ -241,122 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save results to s3\n",
-    "# set up connection\n",
-    "s3_connection = boto3.resource('s3')\n",
-    "s3_client = boto3.client('s3')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s3_client.upload_file()\n",
-    "def write_object_to_s3(s3_client, bucket_name, filename):\n",
-    "    \"\"\"\n",
-    "    Input:\n",
-    "        s3_client: i.e. boto3.client('s3')\n",
-    "        bucket_name (str): Name of bucket to which the file will go\n",
-    "        filename (str): Name of target csv file within bucket (ex: \"cool_data.csv\")\n",
-    "        doc (json )\n",
-    "    Output:\n",
-    "        pandas dataframe of csv (assuming no read_csv arguments are needed)\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    s3_client.upload_file(filename, bucket_name, cancer_df_filename)\n",
-    "    return pd.read_csv(boto_object['Body'], nrows=n_rows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'_id': ObjectId('5eb9bfd9a9cad96111c04276'), 'author': '1488reasons', 'author_created_utc': 1452931267, 'author_flair_css_class': 'nzfirst', 'author_flair_text': '', 'author_fullname': 't2_tu7sn', 'body': \"yeah and he wants to consider it by limiting who is in the community, and he wasn't particularly nice about that by modern feel-good standards that want to keep paying mo' money for dem programs.\", 'controversiality': 0, 'created_utc': 1467090533, 'distinguished': None, 'gilded': 0, 'id': 'd4qvapg', 'link_id': 't3_4q6zhk', 'nest_level': 7, 'parent_id': 't1_d4quv2y', 'reply_delay': 968, 'retrieved_on': 1469344733, 'score': -7, 'stickied': False, 'subreddit': 'newzealand', 'subreddit_id': 't5_2qhma', 'created': 1467090533.0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "for doc in db['comment'].find({}):\n",
-    "    print(doc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import boto\n",
-    "from boto.s3.key import Key\n",
-    "import requests\n",
-    "\n",
-    "#setup the bucket\n",
-    "c = boto.connect_s3(your_s3_key, your_s3_key_secret)\n",
-    "b = c.get_bucket(bucket, validate=False)\n",
-    "\n",
-    "#download the file\n",
-    "url = \"http://en.wikipedia.org/static/images/project-logos/enwiki.png\"\n",
-    "r = requests.get(url)\n",
-    "if r.status_code == 200:\n",
-    "    #upload the file\n",
-    "    k = Key(b)\n",
-    "    k.key = \"image1.png\"\n",
-    "    k.content_type = r.headers['content-type']\n",
-    "    k.set_contents_from_string(r.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for |: 'bytes' and '_io.TextIOWrapper'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-71457e87c49a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/user_activity_dataframe.csv'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;34mb'bytes'\u001b[0m\u001b[0;34m|\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for |: 'bytes' and '_io.TextIOWrapper'"
-     ]
-    }
-   ],
-   "source": [
-    "with open('data/user_activity_dataframe.csv') as fp:\n",
-    "    b'bytes'|fp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s3 = boto3.client('s3')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s3.put_object()\n",
-    "with open(\"data/user_activity_dataframe.csv\", \"rb\") as f:\n",
-    "    s3.upload_fileobj(f, \"cfdv-classify-reddit-trolls/susp_users_comments\", \"OBJECT_NAME\")\n",
-    "    "
+    "bucket_name = 'cfdv-classify-reddit-trolls'\n",
+    "filepath = '/home/ubuntu/src/troll_classifier/data/6704_comments_by_suspicious_users.jsonarr'\n",
+    "filename = 'susp_users_comments/6704_comments_by_suspicious_users.jsonarr'\n",
+    "s3_client = boto3.client('s3')\n",
+    "s3_client.upload_file(filepath, bucket_name, filename)"
    ]
   }
  ],
