use praw to get commentids given submission ids

--- a/get_comments_by_suspicious_users.ipynb
+++ b/get_comments_by_suspicious_users.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -252,6 +252,257 @@
     "s3_client = boto3.client('s3')\n",
     "s3_client.upload_file(filepath, bucket_name, filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import praw\n",
+    "creds = {}\n",
+    "with open ('/opt/cap1/.cap1', 'r') as fp:\n",
+    "    for line in fp:\n",
+    "        k, v = line.replace('\\n','').split('\\t')\n",
+    "        creds[k] = v\n",
+    "reddit = praw.Reddit(client_id=creds['REDDIT_ID'], \n",
+    "    client_secret=creds['REDDIT_SECRET'],\n",
+    "    password=creds['REDDIT_PASSWORD'], \n",
+    "    username=creds['REDDIT_USERNAME'],\n",
+    "    user_agent='accessAPI:v0.0.1 (by /u/{})'.format(creds['REDDIT_USERNAME']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Comment(id='c69bqat'),\n",
+       " Comment(id='c69bv9c'),\n",
+       " Comment(id='c69chu6'),\n",
+       " Comment(id='c69cjhd'),\n",
+       " Comment(id='c69dfwh'),\n",
+       " Comment(id='c69f3xq'),\n",
+       " Comment(id='c69f5b1'),\n",
+       " Comment(id='c69g25b'),\n",
+       " Comment(id='c69i7gm'),\n",
+       " Comment(id='c69jww5'),\n",
+       " Comment(id='c69lt3f'),\n",
+       " Comment(id='c69m0qi'),\n",
+       " Comment(id='c69pqgn'),\n",
+       " Comment(id='c69cl6w')]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission_id = '100ikq'\n",
+    "submission = reddit.submission(id=submission_id)\n",
+    "submission.comments._comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comment = submission.comments._comments[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_replies': <praw.models.comment_forest.CommentForest at 0x7f3539b2e6a0>,\n",
+       " '_submission': Submission(id='100ikq'),\n",
+       " '_reddit': <praw.reddit.Reddit at 0x7f35643d1490>,\n",
+       " 'total_awards_received': 0,\n",
+       " 'approved_at_utc': None,\n",
+       " 'ups': 5,\n",
+       " 'awarders': [],\n",
+       " 'mod_reason_by': None,\n",
+       " 'banned_by': None,\n",
+       " 'author_flair_type': 'text',\n",
+       " 'removal_reason': None,\n",
+       " 'link_id': 't3_100ikq',\n",
+       " 'author_flair_template_id': None,\n",
+       " 'likes': None,\n",
+       " 'user_reports': [],\n",
+       " 'saved': False,\n",
+       " 'id': 'c69bqat',\n",
+       " 'banned_at_utc': None,\n",
+       " 'mod_reason_title': None,\n",
+       " 'gilded': 0,\n",
+       " 'archived': True,\n",
+       " 'no_follow': False,\n",
+       " 'author': Redditor(name='rikker_'),\n",
+       " 'can_mod_post': False,\n",
+       " 'send_replies': True,\n",
+       " 'parent_id': 't3_100ikq',\n",
+       " 'score': 5,\n",
+       " 'author_fullname': 't2_6ey3m',\n",
+       " 'report_reasons': None,\n",
+       " 'approved_by': None,\n",
+       " 'all_awardings': [],\n",
+       " 'subreddit_id': 't5_2skv6',\n",
+       " 'body': 'Prepare yourself for several \"FTL for Borderlands 2\" offers! :P',\n",
+       " 'edited': False,\n",
+       " 'downs': 0,\n",
+       " 'author_flair_css_class': 'mod-rikker',\n",
+       " 'is_submitter': False,\n",
+       " 'collapsed': False,\n",
+       " 'author_flair_richtext': [],\n",
+       " 'author_patreon_flair': False,\n",
+       " 'body_html': '<div class=\"md\"><p>Prepare yourself for several &quot;FTL for Borderlands 2&quot; offers! :P</p>\\n</div>',\n",
+       " 'gildings': {},\n",
+       " 'collapsed_reason': None,\n",
+       " 'associated_award': None,\n",
+       " 'stickied': False,\n",
+       " 'author_premium': False,\n",
+       " 'subreddit_type': 'restricted',\n",
+       " 'can_gild': True,\n",
+       " 'subreddit': Subreddit(display_name='SteamGameSwap'),\n",
+       " 'author_flair_text_color': 'dark',\n",
+       " 'score_hidden': False,\n",
+       " 'permalink': '/r/SteamGameSwap/comments/100ikq/h_borderlands_2_max_payne_3_x2_darksiders_2_csgo/c69bqat/',\n",
+       " 'num_reports': None,\n",
+       " 'locked': False,\n",
+       " 'name': 't1_c69bqat',\n",
+       " 'created': 1347898107.0,\n",
+       " 'author_flair_text': 'http://steamcommunity.com/profiles/76561198054386037',\n",
+       " 'treatment_tags': [],\n",
+       " 'created_utc': 1347869307.0,\n",
+       " 'subreddit_name_prefixed': 'r/SteamGameSwap',\n",
+       " 'controversiality': 0,\n",
+       " 'depth': 0,\n",
+       " 'author_flair_background_color': '',\n",
+       " 'collapsed_because_crowd_control': None,\n",
+       " 'mod_reports': [],\n",
+       " 'mod_note': None,\n",
+       " 'distinguished': None,\n",
+       " '_fetched': True,\n",
+       " 'mod': <praw.models.reddit.comment.CommentModeration at 0x7f35399fc460>}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = dict(vars(comment))\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'total_awards_received': 0,\n",
+       " 'approved_at_utc': None,\n",
+       " 'ups': 5,\n",
+       " 'awarders': [],\n",
+       " 'mod_reason_by': None,\n",
+       " 'banned_by': None,\n",
+       " 'author_flair_type': 'text',\n",
+       " 'removal_reason': None,\n",
+       " 'link_id': 't3_100ikq',\n",
+       " 'author_flair_template_id': None,\n",
+       " 'likes': None,\n",
+       " 'user_reports': [],\n",
+       " 'saved': False,\n",
+       " 'id': 'c69bqat',\n",
+       " 'banned_at_utc': None,\n",
+       " 'mod_reason_title': None,\n",
+       " 'gilded': 0,\n",
+       " 'archived': True,\n",
+       " 'no_follow': False,\n",
+       " 'author': Redditor(name='rikker_'),\n",
+       " 'can_mod_post': False,\n",
+       " 'send_replies': True,\n",
+       " 'parent_id': 't3_100ikq',\n",
+       " 'score': 5,\n",
+       " 'author_fullname': 't2_6ey3m',\n",
+       " 'report_reasons': None,\n",
+       " 'approved_by': None,\n",
+       " 'all_awardings': [],\n",
+       " 'subreddit_id': 't5_2skv6',\n",
+       " 'body': 'Prepare yourself for several \"FTL for Borderlands 2\" offers! :P',\n",
+       " 'edited': False,\n",
+       " 'downs': 0,\n",
+       " 'author_flair_css_class': 'mod-rikker',\n",
+       " 'is_submitter': False,\n",
+       " 'collapsed': False,\n",
+       " 'author_flair_richtext': [],\n",
+       " 'author_patreon_flair': False,\n",
+       " 'body_html': '<div class=\"md\"><p>Prepare yourself for several &quot;FTL for Borderlands 2&quot; offers! :P</p>\\n</div>',\n",
+       " 'gildings': {},\n",
+       " 'collapsed_reason': None,\n",
+       " 'associated_award': None,\n",
+       " 'stickied': False,\n",
+       " 'author_premium': False,\n",
+       " 'subreddit_type': 'restricted',\n",
+       " 'can_gild': True,\n",
+       " 'subreddit': Subreddit(display_name='SteamGameSwap'),\n",
+       " 'author_flair_text_color': 'dark',\n",
+       " 'score_hidden': False,\n",
+       " 'permalink': '/r/SteamGameSwap/comments/100ikq/h_borderlands_2_max_payne_3_x2_darksiders_2_csgo/c69bqat/',\n",
+       " 'num_reports': None,\n",
+       " 'locked': False,\n",
+       " 'name': 't1_c69bqat',\n",
+       " 'created': 1347898107.0,\n",
+       " 'author_flair_text': 'http://steamcommunity.com/profiles/76561198054386037',\n",
+       " 'treatment_tags': [],\n",
+       " 'created_utc': 1347869307.0,\n",
+       " 'subreddit_name_prefixed': 'r/SteamGameSwap',\n",
+       " 'controversiality': 0,\n",
+       " 'depth': 0,\n",
+       " 'author_flair_background_color': '',\n",
+       " 'collapsed_because_crowd_control': None,\n",
+       " 'mod_reports': [],\n",
+       " 'mod_note': None,\n",
+       " 'distinguished': None,\n",
+       " 'mod': <praw.models.reddit.comment.CommentModeration at 0x7f35399fc460>}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keys_to_remove = ['_replies', '_submission', '_reddit', 'mod']\n",
+    "d = dict(vars(comment))\n",
+    "for key in keys_to_remove:\n",
+    "    _ = d.pop(key, None)\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
