hit praw rate limiter, completed 66 of ~5000 threads

--- a/cfdv_2016_blm_get_data.ipynb
+++ b/cfdv_2016_blm_get_data.ipynb
@@ -7297,22 +7297,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6706"
+       "6717"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "db['comment'].count_documents({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_replies': <praw.models.comment_forest.CommentForest at 0x7f3d3220e2e0>,\n",
+       " '_submission': Submission(id='100ikq'),\n",
+       " '_reddit': <praw.reddit.Reddit at 0x7f3d60016730>,\n",
+       " 'total_awards_received': 0,\n",
+       " 'approved_at_utc': None,\n",
+       " 'ups': 0,\n",
+       " 'awarders': [],\n",
+       " 'mod_reason_by': None,\n",
+       " 'banned_by': None,\n",
+       " 'author_flair_type': 'text',\n",
+       " 'removal_reason': None,\n",
+       " 'link_id': 't3_100ikq',\n",
+       " 'author_flair_template_id': None,\n",
+       " 'likes': None,\n",
+       " 'user_reports': [],\n",
+       " 'saved': False,\n",
+       " 'id': 'c69cl6w',\n",
+       " 'banned_at_utc': None,\n",
+       " 'mod_reason_title': None,\n",
+       " 'gilded': 0,\n",
+       " 'archived': True,\n",
+       " 'no_follow': True,\n",
+       " 'author': Redditor(name='Zarllo'),\n",
+       " 'can_mod_post': False,\n",
+       " 'send_replies': True,\n",
+       " 'parent_id': 't3_100ikq',\n",
+       " 'score': 0,\n",
+       " 'author_fullname': 't2_7musn',\n",
+       " 'report_reasons': None,\n",
+       " 'approved_by': None,\n",
+       " 'all_awardings': [],\n",
+       " 'subreddit_id': 't5_2skv6',\n",
+       " 'body': 'Civ 5 key for Darksiders 2?',\n",
+       " 'edited': False,\n",
+       " 'downs': 0,\n",
+       " 'author_flair_css_class': 'tier4',\n",
+       " 'is_submitter': False,\n",
+       " 'collapsed': False,\n",
+       " 'author_flair_richtext': [],\n",
+       " 'author_patreon_flair': False,\n",
+       " 'body_html': '<div class=\"md\"><p>Civ 5 key for Darksiders 2?</p>\\n</div>',\n",
+       " 'gildings': {},\n",
+       " 'collapsed_reason': None,\n",
+       " 'associated_award': None,\n",
+       " 'stickied': False,\n",
+       " 'author_premium': False,\n",
+       " 'subreddit_type': 'restricted',\n",
+       " 'can_gild': True,\n",
+       " 'subreddit': Subreddit(display_name='SteamGameSwap'),\n",
+       " 'author_flair_text_color': 'dark',\n",
+       " 'score_hidden': False,\n",
+       " 'permalink': '/r/SteamGameSwap/comments/100ikq/h_borderlands_2_max_payne_3_x2_darksiders_2_csgo/c69cl6w/',\n",
+       " 'num_reports': None,\n",
+       " 'locked': False,\n",
+       " 'name': 't1_c69cl6w',\n",
+       " 'created': 1347908098.0,\n",
+       " 'author_flair_text': 'http://steamcommunity.com/profiles/76561198061696139',\n",
+       " 'treatment_tags': [],\n",
+       " 'created_utc': 1347879298.0,\n",
+       " 'subreddit_name_prefixed': 'r/SteamGameSwap',\n",
+       " 'controversiality': 0,\n",
+       " 'depth': 0,\n",
+       " 'author_flair_background_color': '',\n",
+       " 'collapsed_because_crowd_control': None,\n",
+       " 'mod_reports': [],\n",
+       " 'mod_note': None,\n",
+       " 'distinguished': None,\n",
+       " '_fetched': True}"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(vars(comments[-1]))"
    ]
   },
   {
@@ -7334,10 +7421,18 @@
     "                    '_reddit', 'mod', 'author',\n",
     "                    'subreddit']:\n",
     "            _ = d.pop(key, None)\n",
+    "        print(d)\n",
     "        try:\n",
     "            db['comment'].insert_one(d)\n",
     "        except errors.DuplicateKeyError:\n",
     "            continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we hit a rate limiter and I keep getting 403 errors now. not sure how to proceed. not much data ingested. We're only at 66/~5000"
    ]
   },
   {
@@ -7404,30 +7499,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['t3_100ikq', 't3_107avx', 't3_10lzf1', 't3_10o4sg', 't3_118yco']"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "post_gen = api.search_submissions(limit=10, filter='id')\n",
-    "list(post_gen)"
+    "list(db['comment'].find().distinct('link_id'))[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['t3_1geklz', 't3_1gepu3', 't3_1gr8g2', 't3_1gtp8x', 't3_1h2ds5']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "reddit"
+    "db['comment'].find().distinct('link_id')[66:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9349"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "!pwd"
+    "db['comment'].count_documents({})"
    ]
   },
   {
