found the Forbidden exception raised during comment extraction

--- a/cfdv_2016_blm_get_data.ipynb
+++ b/cfdv_2016_blm_get_data.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "from psaw import PushshiftAPI\n",
     "import praw\n",
+    "from prawcore import Forbidden\n",
     "import datetime as dt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -24,7 +25,9 @@
     "\n",
     "from datetime import datetime as dt\n",
     "\n",
-    "import boto3"
+    "import boto3\n",
+    "\n",
+    "import time"
    ]
   },
   {
@@ -7411,20 +7414,27 @@
    "outputs": [],
    "source": [
     "# looks good to go with praw here\n",
-    "for submission_id in db['comment'].find().distinct('link_id'):\n",
+    "log = [66]\n",
+    "i = 85\n",
+    "for submission_id in db['comment'].find().distinct('link_id')[86:]:\n",
+    "    i += 1\n",
     "    query_id = submission_id.split('_')[1]\n",
+    "    print(f'searching for comments in {query_id}')\n",
     "    submission = reddit.submission(id=query_id)\n",
-    "    comments = submission.comments._comments\n",
+    "    try:\n",
+    "        comments = submission.comments._comments\n",
+    "    except Forbidden:\n",
+    "        log.append(i)\n",
+    "        continue\n",
     "    for comment in comments:\n",
     "        d = dict(vars(comment))\n",
-    "        for key in ['_replies', '_submission', \n",
-    "                    '_reddit', 'mod', 'author',\n",
-    "                    'subreddit']:\n",
+    "        for key in ['_replies', '_submission',\n",
+    "                '_reddit', 'mod', 'author',\n",
+    "                        'subreddit']:\n",
     "            _ = d.pop(key, None)\n",
-    "        print(d)\n",
     "        try:\n",
     "            db['comment'].insert_one(d)\n",
-    "        except errors.DuplicateKeyError:\n",
+    "        except (errors.DuplicateKeyError, errors.InvalidDocument):\n",
     "            continue"
    ]
   },
@@ -7433,6 +7443,13 @@
    "metadata": {},
    "source": [
     "we hit a rate limiter and I keep getting 403 errors now. not sure how to proceed. not much data ingested. We're only at 66/~5000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I ended up skipping #66 (1geklz), and proceeded to #67 (1gepu3)"
    ]
   },
   {
@@ -7555,6 +7572,47 @@
    ],
    "source": [
     "db['comment'].count_documents({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'HTTPError' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-85-c2cd4fd1918a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mHTTPError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'HTTPError' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "HTTPError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86 t3_1kbcor\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, subid in enumerate(db['comment'].find().distinct('link_id')):\n",
+    "    if subid == 't3_1kbcor':\n",
+    "        print(i, subid)\n",
+    "        break"
    ]
   },
   {
