--- a/cfdv_2016_blm_get_data.ipynb
+++ b/cfdv_2016_blm_get_data.ipynb
@@ -7576,8 +7576,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now the data is all in mongo. Proceed with full dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = {}\n",
+    "fields = { '_id': 0 }\n",
+    "docs = list(db['comment'].find( query, fields ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7586,7 +7604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 220,
    "metadata": {
     "scrolled": true
    },
@@ -7596,82 +7614,83 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 146268 entries, 0 to 146267\n",
-      "Data columns (total 70 columns):\n",
+      "RangeIndex: 230853 entries, 0 to 230852\n",
+      "Data columns (total 71 columns):\n",
       " #   Column                           Non-Null Count   Dtype  \n",
       "---  ------                           --------------   -----  \n",
-      " 0   author                           3705 non-null    object \n",
-      " 1   author_created_utc               3705 non-null    float64\n",
-      " 2   author_flair_css_class           33424 non-null   object \n",
-      " 3   author_flair_text                33362 non-null   object \n",
-      " 4   author_fullname                  126912 non-null  object \n",
-      " 5   body                             146268 non-null  object \n",
-      " 6   controversiality                 146268 non-null  int64  \n",
-      " 7   created_utc                      146268 non-null  float64\n",
-      " 8   distinguished                    110 non-null     object \n",
-      " 9   gilded                           146268 non-null  int64  \n",
-      " 10  id                               146268 non-null  object \n",
-      " 11  link_id                          146268 non-null  object \n",
-      " 12  nest_level                       3608 non-null    float64\n",
-      " 13  parent_id                        146268 non-null  object \n",
-      " 14  reply_delay                      3608 non-null    float64\n",
-      " 15  retrieved_on                     3705 non-null    float64\n",
-      " 16  score                            146268 non-null  int64  \n",
-      " 17  stickied                         144687 non-null  object \n",
-      " 18  subreddit                        3705 non-null    object \n",
-      " 19  subreddit_id                     146268 non-null  object \n",
-      " 20  created                          146268 non-null  float64\n",
-      " 21  edited                           142590 non-null  object \n",
-      " 22  score_hidden                     143577 non-null  object \n",
-      " 23  total_awards_received            142563 non-null  float64\n",
-      " 24  approved_at_utc                  0 non-null       float64\n",
-      " 25  ups                              142563 non-null  float64\n",
-      " 26  awarders                         142563 non-null  object \n",
-      " 27  mod_reason_by                    0 non-null       float64\n",
-      " 28  banned_by                        0 non-null       float64\n",
-      " 29  author_flair_type                123207 non-null  object \n",
-      " 30  removal_reason                   0 non-null       float64\n",
-      " 31  author_flair_template_id         5043 non-null    object \n",
-      " 32  likes                            0 non-null       float64\n",
-      " 33  user_reports                     142563 non-null  object \n",
-      " 34  saved                            142563 non-null  object \n",
-      " 35  banned_at_utc                    0 non-null       float64\n",
-      " 36  mod_reason_title                 0 non-null       float64\n",
-      " 37  archived                         142563 non-null  object \n",
-      " 38  no_follow                        142563 non-null  object \n",
-      " 39  can_mod_post                     142563 non-null  object \n",
-      " 40  send_replies                     142563 non-null  object \n",
-      " 41  report_reasons                   0 non-null       float64\n",
-      " 42  approved_by                      0 non-null       float64\n",
-      " 43  all_awardings                    142563 non-null  object \n",
-      " 44  downs                            142563 non-null  float64\n",
-      " 45  is_submitter                     142563 non-null  object \n",
-      " 46  collapsed                        142563 non-null  object \n",
-      " 47  author_flair_richtext            123207 non-null  object \n",
-      " 48  author_patreon_flair             123207 non-null  object \n",
-      " 49  body_html                        142563 non-null  object \n",
-      " 50  gildings                         142563 non-null  object \n",
-      " 51  collapsed_reason                 1405 non-null    object \n",
-      " 52  associated_award                 0 non-null       float64\n",
-      " 53  author_premium                   123207 non-null  object \n",
-      " 54  subreddit_type                   142563 non-null  object \n",
-      " 55  can_gild                         142563 non-null  object \n",
-      " 56  author_flair_text_color          52603 non-null   object \n",
-      " 57  permalink                        142563 non-null  object \n",
-      " 58  num_reports                      0 non-null       float64\n",
-      " 59  locked                           142563 non-null  object \n",
-      " 60  name                             142563 non-null  object \n",
-      " 61  treatment_tags                   142563 non-null  object \n",
-      " 62  subreddit_name_prefixed          142563 non-null  object \n",
-      " 63  depth                            142563 non-null  float64\n",
-      " 64  author_flair_background_color    51280 non-null   object \n",
-      " 65  collapsed_because_crowd_control  0 non-null       float64\n",
-      " 66  mod_reports                      142563 non-null  object \n",
-      " 67  mod_note                         0 non-null       float64\n",
-      " 68  _fetched                         142563 non-null  object \n",
-      " 69  author_cakeday                   469 non-null     object \n",
-      "dtypes: float64(23), int64(3), object(44)\n",
-      "memory usage: 78.1+ MB\n"
+      " 0   author                           6704 non-null    object \n",
+      " 1   author_created_utc               6597 non-null    float64\n",
+      " 2   author_flair_css_class           57434 non-null   object \n",
+      " 3   author_flair_text                58619 non-null   object \n",
+      " 4   author_fullname                  201891 non-null  object \n",
+      " 5   body                             230853 non-null  object \n",
+      " 6   controversiality                 230219 non-null  float64\n",
+      " 7   created_utc                      230853 non-null  float64\n",
+      " 8   distinguished                    380 non-null     object \n",
+      " 9   gilded                           230215 non-null  float64\n",
+      " 10  id                               230853 non-null  object \n",
+      " 11  link_id                          230853 non-null  object \n",
+      " 12  nest_level                       5954 non-null    float64\n",
+      " 13  parent_id                        230853 non-null  object \n",
+      " 14  reply_delay                      5959 non-null    float64\n",
+      " 15  retrieved_on                     6618 non-null    float64\n",
+      " 16  score                            230853 non-null  int64  \n",
+      " 17  stickied                         229244 non-null  object \n",
+      " 18  subreddit                        6704 non-null    object \n",
+      " 19  subreddit_id                     230853 non-null  object \n",
+      " 20  created                          230853 non-null  float64\n",
+      " 21  edited                           224200 non-null  object \n",
+      " 22  score_hidden                     225195 non-null  object \n",
+      " 23  can_gild                         225982 non-null  object \n",
+      " 24  is_submitter                     225827 non-null  object \n",
+      " 25  no_follow                        224654 non-null  object \n",
+      " 26  permalink                        226286 non-null  object \n",
+      " 27  send_replies                     224654 non-null  object \n",
+      " 28  subreddit_type                   225744 non-null  object \n",
+      " 29  gildings                         224703 non-null  object \n",
+      " 30  updated_utc                      375 non-null     float64\n",
+      " 31  author_flair_template_id         10791 non-null   object \n",
+      " 32  collapsed                        224232 non-null  object \n",
+      " 33  collapsed_reason                 2322 non-null    object \n",
+      " 34  total_awards_received            224149 non-null  float64\n",
+      " 35  approved_at_utc                  0 non-null       float64\n",
+      " 36  ups                              224149 non-null  float64\n",
+      " 37  awarders                         224149 non-null  object \n",
+      " 38  mod_reason_by                    0 non-null       float64\n",
+      " 39  banned_by                        0 non-null       float64\n",
+      " 40  author_flair_type                195825 non-null  object \n",
+      " 41  removal_reason                   0 non-null       float64\n",
+      " 42  likes                            0 non-null       float64\n",
+      " 43  user_reports                     224149 non-null  object \n",
+      " 44  saved                            224149 non-null  object \n",
+      " 45  banned_at_utc                    0 non-null       float64\n",
+      " 46  mod_reason_title                 0 non-null       float64\n",
+      " 47  archived                         224149 non-null  object \n",
+      " 48  can_mod_post                     224149 non-null  object \n",
+      " 49  report_reasons                   0 non-null       float64\n",
+      " 50  approved_by                      0 non-null       float64\n",
+      " 51  all_awardings                    224149 non-null  object \n",
+      " 52  downs                            224149 non-null  float64\n",
+      " 53  author_flair_richtext            195825 non-null  object \n",
+      " 54  author_patreon_flair             195825 non-null  object \n",
+      " 55  body_html                        224149 non-null  object \n",
+      " 56  associated_award                 0 non-null       float64\n",
+      " 57  author_premium                   195825 non-null  object \n",
+      " 58  author_flair_text_color          86132 non-null   object \n",
+      " 59  num_reports                      0 non-null       float64\n",
+      " 60  locked                           224149 non-null  object \n",
+      " 61  name                             224149 non-null  object \n",
+      " 62  treatment_tags                   224149 non-null  object \n",
+      " 63  subreddit_name_prefixed          224149 non-null  object \n",
+      " 64  depth                            224149 non-null  float64\n",
+      " 65  author_flair_background_color    80860 non-null   object \n",
+      " 66  collapsed_because_crowd_control  0 non-null       float64\n",
+      " 67  mod_reports                      224149 non-null  object \n",
+      " 68  mod_note                         0 non-null       float64\n",
+      " 69  _fetched                         224149 non-null  object \n",
+      " 70  author_cakeday                   637 non-null     object \n",
+      "dtypes: float64(26), int64(1), object(44)\n",
+      "memory usage: 125.1+ MB\n"
      ]
     }
    ],
@@ -7771,7 +7790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -7783,15 +7802,15 @@
        "3         Oy now there's a nice quote out of context:\\n\\...\n",
        "4         Living in your own filth isn't the kind of thi...\n",
        "                                ...                        \n",
-       "146263                           Don't forget your inhaler.\n",
-       "146264    I just got used to sleeping without a blanket ...\n",
-       "146265             Aww!! its too bad happening with him....\n",
-       "146266    That is the worst! And it's always the people ...\n",
-       "146267    I usually just take their blanket and next tim...\n",
-       "Name: body, Length: 146268, dtype: object"
+       "230848    https://gist.github.com/3662779\\n\\ngives\\n\\n[t...\n",
+       "230849    I've ported mine from csh to tcsh to bash to z...\n",
+       "230850        PS1=\"[$(uptime | sed 's/: /\\n/g' | tail -1...\n",
+       "230851    https://github.com/wshearn/dotfiles/blob/maste...\n",
+       "230852        function prompt_command {\\n        local N...\n",
+       "Name: body, Length: 230853, dtype: object"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8054,11 +8073,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
-    "corpus = corpus_n100\n",
+    "# this took a minute or so\n",
+    "corpus = [nlp_pre_proc_doc(d) for d in comms['body']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "n_samples = len(corpus)\n",
     "n_features = 5000\n",
     "n_topics = 15\n",
@@ -8071,14 +8099,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done in 0.008s.\n"
+      "done in 3.197s.\n"
      ]
     }
    ],
@@ -8090,47 +8118,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting the NMF model with tf-idf features, n_samples=100 and n_features=5000...\n",
-      "done in 0.088s.\n",
+      "Fitting the NMF model with tf-idf features, n_samples=230853 and n_features=5000...\n",
+      "done in 33.828s.\n",
       "\n",
       "Topics in NMF model:\n",
       "Topic #0:\n",
-      "peopl histori feel progress make im dont bad aye liber\n",
+      "delet comment post account mod app thread file facebook reddit\n",
       "Topic #1:\n",
-      "christian thought scienc scientif religion revolut enlighten wouldnt place newton\n",
+      "thank man chanc dude lot opportun plea enter generos mate\n",
       "Topic #2:\n",
-      "isnt nazi blood fact shit doesnt mean natur challeng scheme\n",
+      "peopl time make think realli use thing guy year work\n",
       "Topic #3:\n",
-      "isi neocon putin quick hillari liter offic toe cruz fullon\n",
+      "op ty thx thank cheer happi nm enter best birthday\n",
       "Topic #4:\n",
-      "oblig suffer allevi expect tell reason use dont moral firstworld\n",
+      "remov post submiss plea rule comment question regard mod thread\n",
       "Topic #5:\n",
-      "key leav medium fortun continu nation john awkward wing labour\n",
+      "good luck everyon enter brother pcmr job guy news veri\n",
       "Topic #6:\n",
-      "construct race social swarthi continu cultur ye talk world faggot\n",
+      "fuck shit guy holi yeah oh stupid god polic hate\n",
       "Topic #7:\n",
-      "racism rape white come base smart idiot crime pure victim\n",
+      "giveaway great enter win thank cool hey ty gener hope\n",
       "Topic #8:\n",
-      "el rato faggot hard god foreign forget form fortun free\n",
+      "look great forward cat cool amaz pretti pictur dog face\n",
       "Topic #9:\n",
-      "american dont zealand new vote care polici way war trump\n",
+      "im sure na gon pretti sorri glad guess gum surpris\n",
       "Topic #10:\n",
-      "kid child tranni trigger poor told mental worri ill alreadi\n",
+      "love id dog play cat copi ta absolut beauti god\n",
       "Topic #11:\n",
-      "argument youv win weak repli reason onc bad ive understand\n",
+      "game play win steam want pc happi buy fun anniversari\n",
       "Topic #12:\n",
-      "look arent screen everyth stupid know bet predict belief wrong\n",
+      "nice veri man tri realli wow work job idea thing\n",
       "Topic #13:\n",
-      "caus problem global issu foreign point gt popul mental ill\n",
+      "awesom man wow dude pretti job idea person work hope\n",
       "Topic #14:\n",
-      "grandmast polit bloke like evid public standard bad work actual\n",
+      "dont know want plea think understand care anyon tell believ\n",
       "\n"
      ]
     }
@@ -8151,11 +8179,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Next, classify the comments under the assumption that the comments come from two distributions of word vectors, one for trolls, and one for normal users"
+   ]
   },
   {
    "cell_type": "code",
