updated to full dataset of comments, ~250K

--- a/cfdv_2016_blm_get_data.ipynb
+++ b/cfdv_2016_blm_get_data.ipynb
@@ -7531,7 +7531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -7560,6 +7560,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1. Group the comments by user and by topic\n",
+    "\n",
     "The incoming data is complete through `link_id` with first character `4`. So find all of these comments."
    ]
   },
@@ -8176,6 +8178,22 @@
     "print(\"\\nTopics in NMF model:\")\n",
     "tfidf_feature_names = tfidf_vectorizer.get_feature_names()\n",
     "print_top_words(nmf, tfidf_feature_names, n_top_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Spoke with Dan. He suggests using a random forest classifier on the tfidf vectors first to see the individual words that associate with the labels. Cool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
    ]
   },
   {
