--- a/get_comments_from_normal_users_in_trolling_threads.ipynb
+++ b/get_comments_from_normal_users_in_trolling_threads.ipynb
@@ -106,6 +106,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dump the data to a file with one json object (comment) per row\n",
+    "\n",
+    "`(base) ubuntu@ip-172-31-37-149:~/src/troll_classifier$`\n",
+    "\n",
+    "`mongoexport --forceTableScan -d cap2 -c comment > data/230853_all_comments_in_threads_with_troll_activity.jsonarr`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Store the dump on s3\n",
+    "\n",
+    "`(base) ubuntu@ip-172-31-37-149:~/src/troll_classifier$`\n",
+    "\n",
+    "`aws s3 cp data/230853_all_comments_in_threads_with_troll_activity.jsonarr s3://cfdv-classify-reddit-trolls/susp_users_comments/230853_all_comments_in_threads_with_troll_activity.jsonarr`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
