first positive predictions from brf

--- a/cfdv_2016_blm_get_data.ipynb
+++ b/cfdv_2016_blm_get_data.ipynb
@@ -8654,22 +8654,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " R^2 score: 0.7609971627211887\n",
+      "\n",
+      " Out of bag score: 0.6250965314404956\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "4"
+       "11084"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(ax.lines)"
+    "# measure accuracy\n",
+    "print(\"\\n R^2 score:\", brf.score(X_test, y_test))\n",
+    "print(f'\\n Out of bag score: {brf.oob_score_}')\n",
+    "y_predict = brf.predict(X_test)\n",
+    "np.sum(y_predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " precision: 0.06243233489714904\n",
+      "    recall: 0.5183520599250936\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n precision:\", precision_score(y_test, y_predict))\n",
+    "print(\"    recall:\", recall_score(y_test, y_predict))"
    ]
   },
   {
